--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: flask-docker-manager
+    image: virtuaworld/docker-manager
     container_name: flask-docker-manager
     ports:
       - "5000:5000"
