--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - FLASK_APP=app.py
       - FLASK_ENV=production
       - FLASK_DEBUG=0
+      - SERVER_IP=192.168.x.x #give your local IP
     volumes:
       - /root/projects-docker-compose:/root/projects-docker-compose
       - /var/run/docker.sock:/var/run/docker.sock
